--- a/html/connection.html
+++ b/html/connection.html
@@ -51,7 +51,7 @@
 </table>
 
 <div ng-show="connection.urls.length > 0">
-	<h2>URLs gathared</h2>
+	<h2>URLs gathered</h2>
 
 	<table class="table">
 
